<resources>
    <string name="app_name">Vehicle</string>
    <string name="title_name">Vehicle Calculation Form</string>
    <string name="m_price">Market Price</string>
    <string name="s_price">Selling Price</string>
    <string name="btn_cal">Calculate</string>
    <string name="full_cose">Full Cost</string>
    <string name="profit">Profit</string>
    <string name="send_title">Send Mail</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="cancle">Cancle</string>
</resources>
